// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AddExpenseForm Add Expense 1`] = `
<div
  className="css-qeuucq-AddExpenseFormComponent"
>
  <div
    className="ui action left icon input"
  >
    <input
      onChange={[Function]}
      placeholder="Expense"
      type="text"
      value=""
    />
    <i
      aria-hidden="true"
      className="yen icon"
      onClick={[Function]}
    />
    <div>
      <div
        aria-expanded={false}
        className="ui compact selection dropdown css-15xmqmr-AddExpenseFormComponent"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          className="default text"
          role="alert"
        >
          Date
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={false}
            aria-selected={true}
            className="selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Date
            </span>
          </div>
        </div>
      </div>
      <div
        className="ui negative right attached disabled button"
        onClick={[Function]}
        role="button"
        tabIndex={-1}
      >
        Submit
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AddIncomeForm Add Income 1`] = `
<div
  className="css-o2h5i5-AddIncomeFormComponent"
>
  <div
    className="ui action left icon input"
  >
    <input
      onChange={[Function]}
      placeholder="Income"
      type="text"
      value=""
    />
    <i
      aria-hidden="true"
      className="yen icon"
      onClick={[Function]}
    />
    <div>
      <div
        aria-expanded={false}
        className="ui compact selection dropdown css-1aj0r2-AddIncomeFormComponent"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          className="default text"
          role="alert"
        >
          Date
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={false}
            aria-selected={true}
            className="selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Date
            </span>
          </div>
        </div>
      </div>
      <div
        className="ui positive right attached disabled button"
        onClick={[Function]}
        role="button"
        tabIndex={-1}
      >
        Submit
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpenseCharts Expense Chart 1`] = `
<div
  className="recharts-responsive-container"
  style={
    Object {
      "height": 400,
      "maxHeight": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "display": "none",
        "height": 0,
        "position": "absolute",
        "visibility": "hidden",
        "width": 0,
      }
    }
  />
</div>
`;

exports[`Storyshots Layout Layout 1`] = `
<div
  className="css-n4xx9i-Layout"
>
  <div
    className="ui huge pointing secondary top fixed css-1jb67kq-AppBar menu"
  >
    <div
      className="ui container"
    >
      <a
        className="active item"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        About
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Contact
      </a>
      <a
        className="right item"
        onClick={[Function]}
      >
        Log in
      </a>
    </div>
  </div>
  <div
    className="css-1qk384q-Layout"
  />
  <div
    className="css-1w6ck5m-Footer"
  >
    <div
      className="ui divider"
    />
    <h4>
      Copyright © 2020 kozukata1993 All Rights Reserved.
    </h4>
  </div>
</div>
`;

exports[`Storyshots Link First 1`] = `
<button
  onClick={[Function]}
  type="button"
>
  Go to "second"
</button>
`;

exports[`Storyshots Link Second 1`] = `
<button
  onClick={[Function]}
  type="button"
>
  Go to "first"
</button>
`;

exports[`Storyshots LoginForm Login Form 1`] = `
<div
  className="ui basic segment"
>
  <div
    className="ui center aligned middle aligned grid"
  >
    <div
      className="row"
    >
      <div
        className="column"
        style={
          Object {
            "maxWidth": 500,
          }
        }
      >
        <h1
          className="ui blue center aligned header"
        >
          Log in
        </h1>
        <form
          className="ui large form"
          onSubmit={[Function]}
        >
          <div
            className="required field"
          >
            <div
              className="field"
            >
              <div
                className="ui fluid left icon input"
              >
                <input
                  aria-describedby={null}
                  onChange={[Function]}
                  placeholder="E-mail address"
                  type="text"
                />
                <i
                  aria-hidden="true"
                  className="at icon"
                  onClick={[Function]}
                />
              </div>
            </div>
            <div
              className="field"
            >
              <div
                className="ui fluid left icon input"
              >
                <input
                  aria-describedby={null}
                  onChange={[Function]}
                  placeholder="Password"
                  type="password"
                />
                <i
                  aria-hidden="true"
                  className="lock icon"
                  onClick={[Function]}
                />
              </div>
            </div>
            <div
              className="field"
            >
              <button
                aria-describedby={null}
                className="ui blue large fluid button"
                onClick={[Function]}
              >
                Log in
              </button>
            </div>
          </div>
          <div
            className="ui horizontal divider"
          >
            or
          </div>
          <h3
            className="ui header"
          >
            Log in with ...
          </h3>
        </form>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="column"
        style={
          Object {
            "maxWidth": 800,
          }
        }
      >
        <button
          className="ui google plus button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="google icon"
            onClick={[Function]}
          />
          Google
        </button>
        <button
          className="ui facebook button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="facebook icon"
            onClick={[Function]}
          />
          Facebook
        </button>
        <button
          className="ui twitter button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="twitter icon"
            onClick={[Function]}
          />
          Twitter
        </button>
        <button
          className="ui grey button"
          data-testid="loginAnonymously"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="user icon"
            onClick={[Function]}
          />
          Anonymously
        </button>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="column"
        style={
          Object {
            "maxWidth": 400,
          }
        }
      >
        <div
          className="ui message"
        >
          New to us? Sign Up
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MyTableUnit My Table Unit 1`] = `
<table
  className="ui table"
>
  <tbody
    className=""
  >
    <tr
      className=""
    >
      <td
        className=""
      >
        2020/1/1
      </td>
      <td
        className=""
      >
        Expense
      </td>
      <td
        className=""
      >
        10000
      </td>
      <td
        className=""
      >
        <div
          aria-expanded={false}
          className="ui dropdown"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-atomic={true}
            aria-live="polite"
            className="text"
            role="alert"
          >
            Action
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              className="item"
              onClick={[Function]}
              role="option"
            >
              <span
                className="text"
              >
                Edit
              </span>
            </div>
            <div
              className="item"
              onClick={[Function]}
              role="option"
            >
              <span
                className="text"
              >
                Delete
              </span>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Storybook Knobs As Dynamic Variables 1`] = `
<div>
  I am James and I'm 35 years old.
</div>
`;

exports[`Storyshots Storybook Knobs With A Button 1`] = `
<button
  disabled={false}
  type="button"
>
  Hello Storybook
</button>
`;

exports[`Storyshots actionButton Button 1`] = `
<button
  className="ui button"
  onClick={[Function]}
>
  Click Here
</button>
`;
